--- a/UI_assets/less/header.less
+++ b/UI_assets/less/header.less
@@ -333,6 +333,11 @@
             width: 0;
         }
     }
+    >.singleLine{
+        position:relative;
+        top:45%;
+        transform:translateY(-55%);
+    }
 }
 
 .cart-empty-heading {
